fix: 룰렛 overflow 관련 버그 수정

--- a/src/components/roulletSection/Roullet-section.css
+++ b/src/components/roulletSection/Roullet-section.css
@@ -26,6 +26,10 @@
   position: relative;
 }
 
+.roullet-roll-wrapper {
+  overflow: hidden;
+}
+
 .start-button {
   width: 5.5rem;
   height: 5.5rem;
